syntax = "proto3";
package enreach.miner;

option go_package = "enreach/x/miner/types";

message Miner {
  uint64 id = 1;
  string minerId = 2; 
  string evmAddress = 3; 
  string regionCode = 4; 
  string status = 5; 
  string creator = 6;
}
